Correct proper spacing of user profile image

--- a/frontend/src/styles/PhotoDetailsModal.scss
+++ b/frontend/src/styles/PhotoDetailsModal.scss
@@ -17,6 +17,7 @@
 .photo-details-modal__close-button {
   background-color: white;
   border: none;
+  border-radius: 5px;
   color: white;
   text-align: center;
   text-decoration: none;
