--- a/frontend/src/styles/PhotoListItem.scss
+++ b/frontend/src/styles/PhotoListItem.scss
@@ -24,7 +24,7 @@
   object-fit: cover;
   border-radius: 100%;
   vertical-align: middle;
-  margin-right: 8px;
+  margin: 8px;
   width: 40px;
   height: 40px;
 }
